# a11y-assist

./: .gitignore  .polyglot-cache.json  CHANGELOG.md  ENGINE.md  README.es.md  README.fr.md  README.hi.md  README.it.md  README.ja.md  README.md  README.pt-BR.md  README.zh.md  RELEASE_NOTES.md  SCORECARD.md  SECURITY.md  SHIP_GATE.md  pyproject.toml
.github/workflows/: ci.yml
a11y_assist/: __init__.py  cli.py  from_cli_error.py  guard.py  ingest.py  methods.py  render.py
a11y_assist/profiles/: __init__.py  cognitive_load.py  plain_language.py  screen_reader.py
a11y_assist/schemas/: assist.response.schema.v0.1.json
scripts/: verify.sh
site/: astro.config.mjs
site/src/: site-config.ts
site/src/content/docs/handbook/: beginners.md  commands.md  getting-started.md  index.md  profiles.md  safety.md
tests/: test_cognitive_load.py  test_diagnose.py  test_golden.py  test_guard.py  test_guard_integration.py  test_ingest.py  test_methods_metadata.py  test_plain_language.py  test_screen_reader.py  test_storage_last.py  test_triage.py
