[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a11y-assist"
version = "0.2.0"
description = "Low-vision-first assistant for CLI failures (additive, deterministic)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
  "click>=8.1.7",
  "jsonschema>=4.22.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[project.scripts]
a11y-assist = "a11y_assist.cli:main"
assist-run = "a11y_assist.cli:assist_run"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
